Move vote results to the bottom

--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -7,7 +7,7 @@
     "resume": "Reprendre",
     "copy": "Copier",
     "copied": "Copié",
-    "startVote": "Commencer le Vote",
+    "startVote": "Voter",
     "generateAiAnswers": "Générer des Réponses IA 🤖",
     "sendMessage": "Envoyer un message",
     "startGame": "Commencer la Partie",
