Make the vote phase end after 30 seconds + misc tweaks

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -21,7 +21,7 @@
     "lobby": "Lobby 🏠",
     "warmingUp": "Warming up without AI 💬",
     "findTheAi": "Found the AI? 🤖",
-    "voteNow": "Vote for the AI 🗳️",
+    "voteNow": "Quick! Vote for the AI 🗳️",
     "gameOver": "Game over 🏁",
     "inProgress": "In progress"
   },
