--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -21,7 +21,7 @@
     "lobby": "Lobby 🏠",
     "warmingUp": "Échauffement sans IA 💬",
     "findTheAi": "Vous avez trouvé l'IA ? 🤖",
-    "voteNow": "Votez pour l'IA 🗳️",
+    "voteNow": "Vite! Votez pour l'IA 🗳️",
     "gameOver": "Partie terminée 🏁",
     "inProgress": "En cours"
   },
