Make bot send button look different, enforce single word

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -60,7 +60,7 @@
   },
   "forms": {
     "yourName": "Your name",
-    "botWordInput": "🤖 Send a word to the AI that controls you"
+    "botWordInput": "🤖 Give one word to the AI"
   },
   "footer": {
     "madeBy": "Made with ❤️ by Aurelien from",
